--- a/Diagnosis.Common.Presentation/Diagnosis.Common.Presentation.csproj
+++ b/Diagnosis.Common.Presentation/Diagnosis.Common.Presentation.csproj
@@ -135,6 +135,7 @@
     <Compile Include="Behaviors\IsFocused.cs" />
     <Compile Include="Behaviors\MenuItemExtensions.cs" />
     <Compile Include="Behaviors\MultiSelectorBehaviours.cs" />
+    <Compile Include="Behaviors\PasswordBoxAssistant.cs" />
     <Compile Include="Behaviors\RowDblClick.cs" />
     <Compile Include="Behaviors\TwoListSynchronizer.cs" />
     <Compile Include="Controls\Common\AlignableWrapPanel.cs" />
