--- a/Diagnosis.Common.Presentation/packages.config
+++ b/Diagnosis.Common.Presentation/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Extended.Wpf.Toolkit" version="2.3" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
+  <package id="MahApps.Metro" version="1.0.0.0" targetFramework="net40" />
 </packages>
