--- a/Diagnosis.Server.App/packages.config
+++ b/Diagnosis.Server.App/packages.config
@@ -3,6 +3,7 @@
   <package id="FluentValidation" version="5.4.0.0" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.3.3.4001" targetFramework="net40" />
   <package id="log4net" version="2.0.3" targetFramework="net40" />
+  <package id="MahApps.Metro" version="1.0.0.0" targetFramework="net40" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
 </packages>
