--- a/Diagnosis.Client.App/Diagnosis.Client.App.csproj
+++ b/Diagnosis.Client.App/Diagnosis.Client.App.csproj
@@ -347,6 +347,7 @@
     <Compile Include="Windows\Shell\AvalonTemplateSelector.cs" />
     <Compile Include="Windows\Shell\AvalonStyleSelector.cs" />
     <Compile Include="Windows\Shell\LayoutInitializer.cs" />
+    <Compile Include="Windows\Shell\MyChildWindow.cs" />
     <Compile Include="Windows\Shell\MyDockingManager.cs" />
     <Compile Include="Windows\Editors\WordEditorWindow.xaml.cs">
       <DependentUpon>WordEditorWindow.xaml</DependentUpon>
