--- a/Diagnosis.Common.Presentation/Diagnosis.Common.Presentation.csproj
+++ b/Diagnosis.Common.Presentation/Diagnosis.Common.Presentation.csproj
@@ -149,6 +149,9 @@
     <Compile Include="Controls\Common\CommaList.xaml.cs">
       <DependentUpon>CommaList.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Controls\Common\DragControl.xaml.cs">
+      <DependentUpon>DragControl.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Controls\Common\DragMarker.cs" />
     <Compile Include="Controls\Common\RadioListBox.xaml.cs">
       <DependentUpon>RadioListBox.xaml</DependentUpon>
@@ -206,6 +209,10 @@
   </ItemGroup>
   <ItemGroup>
     <Page Include="Controls\Common\CommaList.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Controls\Common\DragControl.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
