--- a/Diagnosis.Models/Diagnosis.Models.csproj
+++ b/Diagnosis.Models/Diagnosis.Models.csproj
@@ -153,6 +153,7 @@
     <Compile Include="Entities\Setting.cs" />
     <Compile Include="Entities\UomType.cs" />
     <Compile Include="Enums\Confidence.cs" />
+    <Compile Include="Enums\HrCreatedAtOffset.cs" />
     <Compile Include="Enums\HealthRecordQueryScope.cs" />
     <Compile Include="Enums\PatientsView.cs" />
     <Compile Include="Enums\HrView.cs" />
