model. Ord is required in HrCategory and UomType ctor

--- a/Diagnosis.Server.App/Diagnosis.Server.App.csproj
+++ b/Diagnosis.Server.App/Diagnosis.Server.App.csproj
@@ -161,6 +161,7 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="DesignData\SampleViewModels.cs" />
     <Compile Include="Screens\Specialities.xaml.cs">
       <DependentUpon>Specialities.xaml</DependentUpon>
     </Compile>
