--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -215,7 +215,7 @@
     <Compile Include="Screens\Card\HrListViewModel - ClipboardTarget.cs" />
     <Compile Include="Screens\Card\HrListViewModel - DragDrop.cs" />
     <Compile Include="Screens\Card\ShortHealthRecordViewModel - DragDrop.cs" />
-    <Compile Include="Screens\OpenRemoteViewModel.cs" />
+    <Compile Include="Controls\DataConnectionViewModel.cs" />
     <Compile Include="Screens\ConfirmPasswordViewModel.cs" />
     <Compile Include="Screens\SyncViewModel.cs" />
     <Compile Include="Screens\Shell\ServerMainWindowViewModel.cs" />
