--- a/Diagnosis.Models/Diagnosis.Models.csproj
+++ b/Diagnosis.Models/Diagnosis.Models.csproj
@@ -153,7 +153,7 @@
     <Compile Include="Entities\Setting.cs" />
     <Compile Include="Entities\UomType.cs" />
     <Compile Include="Entities\Vocabulary.cs" />
-    <Compile Include="Entities\TempWord.cs" />
+    <Compile Include="Entities\WordTemplate.cs" />
     <Compile Include="Enums\Confidence.cs" />
     <Compile Include="Enums\HrCreatedAtOffset.cs" />
     <Compile Include="Enums\HealthRecordQueryScope.cs" />
