data. AddVocabulary migration
--HG--
branch : f/Vocabulary

--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -207,6 +207,7 @@
     <Compile Include="Sync\Scopes.cs" />
     <Compile Include="Versions\Migrations\09 AddHolderHrUpdatedAt.cs" />
     <Compile Include="Versions\Migrations\13 AddHrItemConfidence.cs" />
+    <Compile Include="Versions\Migrations\15 AddVocabulary.cs" />
     <Compile Include="Versions\Migrations\14 AlterUomAbbrLength.cs" />
     <Compile Include="Versions\Migrations\11 AlterUomFactor.cs" />
     <Compile Include="Versions\Migrations\10 AddUomType.cs" />
