--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -206,6 +206,7 @@
     <Compile Include="SqlHelper.cs" />
     <Compile Include="Sync\Syncer.cs" />
     <Compile Include="Sync\Scopes.cs" />
+    <Compile Include="Sync\VocLoader.cs" />
     <Compile Include="Versions\Migrations\09 AddHolderHrUpdatedAt.cs" />
     <Compile Include="Versions\Migrations\13 AddHrItemConfidence.cs" />
     <Compile Include="Versions\Migrations\15 AddVocabulary.cs" />
