--- a/Diagnosis.Tests/Diagnosis.Tests.csproj
+++ b/Diagnosis.Tests/Diagnosis.Tests.csproj
@@ -149,6 +149,7 @@
     <Compile Include="ModelTests\HrCategoryTest.cs" />
     <Compile Include="SearchTests\DiagnosisSearchTest.cs" />
     <Compile Include="ViewModelsTests\AutocompleteTest.cs" />
+    <Compile Include="ViewModelsTests\VocabularyListTest.cs" />
     <Compile Include="ViewModelsTests\HrListTest.cs" />
     <Compile Include="ViewModelsTests\CardTest.cs" />
     <Compile Include="CommonTests\DateFormatterTest.cs" />
