code. Move remove app/course managers and specialcases

--- a/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
+++ b/Diagnosis.ViewModels/Diagnosis.ViewModels.csproj
@@ -225,18 +225,15 @@
     <Compile Include="Screens\Doctors\DoctorsListViewModel.cs" />
     <Compile Include="Screens\Doctors\DoctorEditorViewModel.cs" />
     <Compile Include="Screens\Doctors\DoctorViewModel.cs" />
-    <Compile Include="Screens\Card\AppointmentEditorViewModel.cs" />
+    <Compile Include="Screens\Card\Editors\AppointmentEditorViewModel.cs" />
     <Compile Include="Screens\Card\HeaderViewModel.cs" />
     <Compile Include="Screens\Card\Navigator.cs" />
     <Compile Include="Screens\Card\CardItemViewModel.cs" />
-    <Compile Include="Screens\Card\CourseEditorViewModel.cs" />
+    <Compile Include="Screens\Card\Editors\CourseEditorViewModel.cs" />
     <Compile Include="Screens\Card\CardViewModel.cs" />
-    <Compile Include="Screens\Card\Holders\CourseViewModel.cs" />
+    <Compile Include="Screens\Card\Editors\CourseViewModel.cs" />
     <Compile Include="Screens\HealthRecords\HrListViewModel.cs" />
-    <Compile Include="Screens\Card\Managers\AppointmentsManager.cs" />
     <Compile Include="Screens\HealthRecords\ShortHealthRecordViewModel.cs" />
-    <Compile Include="Screens\Card\Holders\ShortAppointmentViewModel.cs" />
-    <Compile Include="Screens\Card\Holders\ShortCourseViewModel.cs" />
     <Compile Include="Screens\Patients\PatientViewModel.cs" />
     <Compile Include="Screens\HealthRecords\HrViewer.cs" />
     <Compile Include="Screens\AdminSettingsViewModel.cs" />
@@ -260,10 +257,7 @@
     <Compile Include="Search\SearchResultViewModel.cs" />
     <Compile Include="Search\Statistic.cs" />
     <Compile Include="Types\CheckableBase.cs" />
-    <Compile Include="Screens\Card\Managers\AppointmentsSpecialCaseManager.cs" />
-    <Compile Include="Screens\Card\Holders\AppointmentViewModel.cs" />
-    <Compile Include="Screens\Card\Managers\CoursesManager.cs" />
-    <Compile Include="Screens\Card\Holders\CourseWithSpecialCaseViewModel.cs" />
+    <Compile Include="Screens\Card\Editors\AppointmentViewModel.cs" />
     <Compile Include="Autocomplete\DiagnosisViewModel.cs" />
     <Compile Include="Screens\HealthRecords\HealthRecordManager.cs" />
     <Compile Include="Screens\Card\HealthRecordViewModel.cs" />
