--- a/Diagnosis.Tests/Diagnosis.Tests.csproj
+++ b/Diagnosis.Tests/Diagnosis.Tests.csproj
@@ -148,6 +148,7 @@
     <Compile Include="ModelTests\HrItemTest.cs" />
     <Compile Include="ModelTests\HealthRecordTest.cs" />
     <Compile Include="ModelTests\HrCategoryTest.cs" />
+    <Compile Include="ModelTests\VocabularyTest.cs" />
     <Compile Include="SearchTests\DiagnosisSearchTest.cs" />
     <Compile Include="ViewModelsTests\AutocompleteTest.cs" />
     <Compile Include="ViewModelsTests\VocabularyListTest.cs" />
