--- a/Diagnosis.Data/Diagnosis.Data.csproj
+++ b/Diagnosis.Data/Diagnosis.Data.csproj
@@ -259,9 +259,6 @@
     <EmbeddedResource Include="Versions\Sql\insert_all_Icd.sql" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Versions\Sql\create_client.sql" />
-  </ItemGroup>
-  <ItemGroup>
     <EmbeddedResource Include="Versions\Sql\insert_Icd.sql" />
     <EmbeddedResource Include="Versions\Sql\insert_Word.sql" />
   </ItemGroup>
@@ -270,6 +267,9 @@
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Versions\Sql\inmem_sqlite.sql" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Versions\Sql\create_client_2015_04_01.sql" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
