sync. More logging

--- a/Diagnosis.Client.App/App.config
+++ b/Diagnosis.Client.App/App.config
@@ -6,6 +6,18 @@
       <section name="Diagnosis.Client.App.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
   </configSections>
+  <system.diagnostics>
+    <switches>
+        <!--0-off, 1-error, 2-warn, 3-info, 4-verbose.--> 
+      <add name="SyncTracer" value="2" />
+    </switches>
+
+    <trace autoflush="true">
+      <listeners>
+        <!--<add name="TestListener" type="System.Diagnostics.TextWriterTraceListener"  initializeData="p:\Trace.txt"/>-->
+      </listeners>
+    </trace>
+  </system.diagnostics>
   <connectionStrings>
     <clear />
     <add name="client"
