--- a/Diagnosis.Models/Diagnosis.Models.csproj
+++ b/Diagnosis.Models/Diagnosis.Models.csproj
@@ -152,6 +152,7 @@
     <Compile Include="Entities\Comment.cs" />
     <Compile Include="Entities\Setting.cs" />
     <Compile Include="Entities\SpecialityVocabularies.cs" />
+    <Compile Include="Entities\VocabularyWords.cs" />
     <Compile Include="Entities\UomType.cs" />
     <Compile Include="Entities\Vocabulary.cs" />
     <Compile Include="Entities\WordTemplate.cs" />
