--- a/Diagnosis.Server.App/app.config
+++ b/Diagnosis.Server.App/app.config
@@ -8,9 +8,7 @@
   </configSections>
   <connectionStrings>
     <clear />
-    <add name="server"
-         providerName="System.Data.SqlServerCE.4.0"
-         connectionString="Data Source=diagnosis-server.sdf;Persist Security Info=False;" />
+    <add name="server" providerName="System.Data.SqlServerCE.4.0" connectionString="Data Source=%LOCALAPPDATA%\NBI_KemSU\Diagnosis\Server\diagnosis-server.sdf;Persist Security Info=False;" />
   </connectionStrings>
   <log4net>
     <appender name="TraceAppender" type="log4net.Appender.TraceAppender">
